feat: update CORS configuration to allow credentials and improve code readability